--- a/radar.html
+++ b/radar.html
@@ -477,10 +477,130 @@
                 grid-template-columns: 1fr;
             }
         }
+
+        /* Sidebar */
+        .sidebar {
+            position: fixed;
+            top: 0;
+            left: 0;
+            height: 100vh;
+            width: 280px;
+            background: var(--card-bg);
+            border-right: 1px solid var(--border);
+            transform: translateX(-100%);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            z-index: 1000;
+        }
+
+        .sidebar.open {
+            transform: translateX(0);
+            box-shadow: 12px 0 30px rgba(0, 0, 0, 0.35);
+        }
+
+        .sidebar-header {
+            padding: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            border-bottom: 1px solid var(--border);
+        }
+
+        .sidebar-title {
+            font-weight: 700;
+            color: var(--accent);
+            letter-spacing: 1px;
+        }
+
+        .sidebar-nav {
+            padding: 10px;
+        }
+
+        .sidebar-link {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            padding: 12px 16px;
+            border-radius: 10px;
+            color: var(--text);
+            cursor: pointer;
+            border: 1px solid transparent;
+            transition: background 0.2s ease, border-color 0.2s ease;
+        }
+
+        .sidebar-link:hover {
+            background: rgba(108, 92, 231, 0.15);
+            border-color: rgba(108, 92, 231, 0.3);
+        }
+
+        .sidebar-link.active {
+            background: linear-gradient(135deg, #6c5ce7, #00ff88);
+            color: #0f0f13;
+            font-weight: 600;
+        }
+
+        .sidebar-toggle {
+            position: fixed;
+            top: 24px;
+            left: 24px;
+            z-index: 1100;
+            background: rgba(30, 30, 40, 0.8);
+            color: var(--text);
+            border: 1px solid rgba(108, 92, 231, 0.4);
+            border-radius: 12px;
+            padding: 10px 12px;
+            cursor: pointer;
+            backdrop-filter: blur(6px);
+        }
+
+        .sidebar-toggle:hover {
+            border-color: var(--accent);
+        }
+
+        .sidebar-overlay {
+            position: fixed;
+            inset: 0;
+            background: rgba(0, 0, 0, 0.35);
+            z-index: 900;
+            opacity: 0;
+            pointer-events: none;
+            transition: opacity 0.3s ease;
+        }
+
+        .sidebar-overlay.visible {
+            opacity: 1;
+            pointer-events: auto;
+        }
+
+        @media (min-width: 1024px) {
+            body.sidebar-open .container {
+                margin-left: 280px;
+                transition: margin 0.3s ease;
+            }
+        }
+
+        @media (max-width: 1023px) {
+            .sidebar {
+                width: 82%;
+                max-width: 360px;
+            }
+        }
     </style>
 </head>
 
 <body>
+    <button id="sidebarToggle" class="sidebar-toggle">☰ Menu</button>
+    <aside id="sidebar" class="sidebar">
+        <div class="sidebar-header">
+            <div class="sidebar-title">RW Radar</div>
+            <button id="sidebarClose" class="sidebar-toggle" style="position: static; padding: 8px 10px;">✕</button>
+        </div>
+        <nav class="sidebar-nav">
+            <div class="sidebar-link" data-tab="overview">📊 Visão Geral</div>
+            <div class="sidebar-link" data-tab="leagues">🏆 Ligas</div>
+            <div class="sidebar-link" data-tab="players">👥 Jogadores</div>
+        </nav>
+    </aside>
+    <div id="sidebarOverlay" class="sidebar-overlay"></div>
     <div class="container">
         <div class="header">
             <h1>🎯 RW TIPS - RADAR DE MERCADO</h1>
@@ -1404,14 +1524,70 @@
 
             document.getElementById(tab).classList.add('active');
 
+            // Sync sidebar active state
+            setActiveSidebarLink(tab);
+
             if (tab === 'leagues') renderLeagueDetails();
             else if (tab === 'players') updatePlayersList();
             else if (tab === 'overview') renderOverview();
         }
 
+        // Sidebar logic
+        function initSidebar() {
+            const sidebar = document.getElementById('sidebar');
+            const toggle = document.getElementById('sidebarToggle');
+            const closeBtn = document.getElementById('sidebarClose');
+            const overlay = document.getElementById('sidebarOverlay');
+            const links = Array.from(document.querySelectorAll('.sidebar-link'));
+
+            const open = () => {
+                sidebar.classList.add('open');
+                document.body.classList.add('sidebar-open');
+                overlay.classList.add('visible');
+                localStorage.setItem('sidebar-open', '1');
+            };
+
+            const close = () => {
+                sidebar.classList.remove('open');
+                document.body.classList.remove('sidebar-open');
+                overlay.classList.remove('visible');
+                localStorage.removeItem('sidebar-open');
+            };
+
+            toggle?.addEventListener('click', () => {
+                sidebar.classList.contains('open') ? close() : open();
+            });
+            closeBtn?.addEventListener('click', close);
+            overlay?.addEventListener('click', close);
+
+            links.forEach(link => link.addEventListener('click', () => {
+                const tab = link.getAttribute('data-tab');
+                if (tab) switchTab(tab);
+                close();
+            }));
+
+            // Restore previous state
+            if (localStorage.getItem('sidebar-open') === '1') open();
+
+            // Set initial active link
+            setActiveSidebarLink(getActiveTab());
+        }
+
+        function setActiveSidebarLink(tab) {
+            document.querySelectorAll('.sidebar-link').forEach(el => {
+                el.classList.toggle('active', el.getAttribute('data-tab') === tab);
+            });
+        }
+
+        function getActiveTab() {
+            const active = document.querySelector('.tab-content.active');
+            return active ? active.id : 'overview';
+        }
+
         // Initialize
         document.addEventListener('DOMContentLoaded', async () => {
             try {
+                initSidebar();
                 allGames = await fetchGames();
                 processData();
 
