--- a/radar.html
+++ b/radar.html
@@ -205,6 +205,114 @@
             color: var(--accent);
         }
 
+        /* Recent Games */
+        .games-list {
+            display: grid;
+            gap: 15px;
+            margin-top: 20px;
+        }
+
+        .game-card {
+            background: linear-gradient(135deg, rgba(30, 30, 40, 0.8), rgba(20, 20, 30, 0.8));
+            border-radius: 16px;
+            padding: 20px;
+            border: 1px solid rgba(108, 92, 231, 0.2);
+            transition: all 0.3s;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .game-card:hover {
+            border-color: var(--accent);
+            transform: translateY(-3px);
+            box-shadow: 0 8px 24px rgba(0, 255, 136, 0.2);
+        }
+
+        .game-card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 4px;
+            height: 100%;
+            background: linear-gradient(180deg, var(--accent), var(--primary));
+        }
+
+        .game-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 15px;
+            padding-bottom: 12px;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+        }
+
+        .game-league {
+            font-size: 0.75rem;
+            color: var(--text-sec);
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            font-weight: 600;
+        }
+
+        .game-date {
+            font-size: 0.85rem;
+            color: var(--warning);
+            font-weight: 600;
+        }
+
+        .game-content {
+            display: grid;
+            grid-template-columns: 1fr auto 1fr;
+            align-items: center;
+            gap: 20px;
+        }
+
+        .team-section {
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+        }
+
+        .team-name {
+            font-size: 1.1rem;
+            font-weight: 700;
+            color: var(--text);
+        }
+
+        .player-name {
+            font-size: 0.9rem;
+            color: var(--accent);
+            font-weight: 600;
+        }
+
+        .score-section {
+            text-align: center;
+            padding: 0 20px;
+        }
+
+        .score {
+            font-size: 2.5rem;
+            font-weight: 800;
+            color: var(--accent);
+            line-height: 1;
+            margin-bottom: 8px;
+        }
+
+        .ht-score {
+            font-size: 0.85rem;
+            color: var(--text-sec);
+            font-weight: 600;
+        }
+
+        .team-home {
+            text-align: left;
+        }
+
+        .team-away {
+            text-align: right;
+        }
+
         /* Player Metrics Table */
         .player-metrics-table {
             width: 100%;
@@ -256,6 +364,7 @@
         .player-metrics-table tbody tr {
             transition: all 0.2s;
             background: rgba(255, 255, 255, 0.02);
+            cursor: pointer;
         }
 
         .player-metrics-table tbody tr:hover {
@@ -635,6 +744,19 @@
             .comparison-grid {
                 grid-template-columns: 1fr;
             }
+
+            .game-content {
+                grid-template-columns: 1fr;
+                gap: 15px;
+            }
+
+            .team-away {
+                text-align: left;
+            }
+
+            .score-section {
+                order: -1;
+            }
         }
 
         @media (max-width: 1024px) {
@@ -829,6 +951,19 @@
 
                 <div class="section">
                     <div class="section-title">
+                        <span class="icon">🎮</span>
+                        Jogos Recentes da Liga
+                    </div>
+                    <div class="controls">
+                        <select id="leaguePlayerFilter" onchange="filterLeagueGamesByPlayer()">
+                            <option value="">Todos os Jogadores</option>
+                        </select>
+                    </div>
+                    <div class="games-list" id="leagueGamesList"></div>
+                </div>
+
+                <div class="section">
+                    <div class="section-title">
                         <span class="icon">👑</span>
                         Top Jogadores da Liga
                     </div>
@@ -1007,6 +1142,7 @@
         let leagueData = {};
         let playerData = {};
         let h2hData = null;
+        let currentLeagueGames = [];
 
         // Fetch games from API
         async function fetchGames() {
@@ -1115,6 +1251,70 @@
                     select.value = currentValue;
                 }
             });
+        }
+
+        // Format date/time
+        function formatDateTime(dateString) {
+            const date = new Date(dateString);
+            return date.toLocaleString('pt-BR', {
+                day: '2-digit',
+                month: '2-digit',
+                year: 'numeric',
+                hour: '2-digit',
+                minute: '2-digit'
+            });
+        }
+
+        // Render league games
+        function renderLeagueGames(games, filterPlayer = '') {
+            const gamesList = document.getElementById('leagueGamesList');
+            
+            let filteredGames = games;
+            if (filterPlayer) {
+                filteredGames = games.filter(g => 
+                    g.home.name === filterPlayer || g.away.name === filterPlayer
+                );
+            }
+
+            if (filteredGames.length === 0) {
+                gamesList.innerHTML = '<div class="empty-state"><div style="font-size: 3rem; margin-bottom: 15px; opacity: 0.5;">🎮</div><div>Nenhum jogo encontrado</div></div>';
+                return;
+            }
+
+            gamesList.innerHTML = filteredGames.map(game => `
+                <div class="game-card">
+                    <div class="game-header">
+                        <div class="game-league">${game.competition.name}</div>
+                        <div class="game-date">${formatDateTime(game.start_at)}</div>
+                    </div>
+                    <div class="game-content">
+                        <div class="team-section team-home">
+                            <div class="team-name">${game.home.team_name}</div>
+                            <div class="player-name">${game.home.name}</div>
+                        </div>
+                        <div class="score-section">
+                            <div class="score">${game.score.home} x ${game.score.away}</div>
+                            <div class="ht-score">HT: ${game.scoreHT?.home || 0} - ${game.scoreHT?.away || 0}</div>
+                        </div>
+                        <div class="team-section team-away">
+                            <div class="team-name">${game.away.team_name}</div>
+                            <div class="player-name">${game.away.name}</div>
+                        </div>
+                    </div>
+                </div>
+            `).join('');
+        }
+
+        // Filter league games by player
+        function filterLeagueGamesByPlayer() {
+            const filterPlayer = document.getElementById('leaguePlayerFilter').value;
+            const windowSize = parseInt(document.getElementById('leagueWindow').value);
+            
+            const gamesToShow = filterPlayer 
+                ? currentLeagueGames.filter(g => g.home.name === filterPlayer || g.away.name === filterPlayer).slice(0, 10)
+                : currentLeagueGames.slice(0, windowSize);
+
+            renderLeagueGames(gamesToShow, filterPlayer);
         }
 
         // Calculate H2H metrics
@@ -1338,10 +1538,11 @@
             document.getElementById('leagueEmpty').style.display = 'none';
             document.getElementById('leagueDetails').style.display = 'block';
 
-            const games = leagueData[league].slice(0, windowSize);
+            const games = leagueData[league];
+            currentLeagueGames = games;
 
             let totalGoalsHT = 0, totalGoalsFT = 0;
-            games.forEach(g => {
+            games.slice(0, windowSize).forEach(g => {
                 totalGoalsHT += (g.scoreHT?.home || 0) + (g.scoreHT?.away || 0);
                 totalGoalsFT += g.score.home + g.score.away;
             });
@@ -1353,28 +1554,44 @@
                 </div>
                 <div class="stat-card">
                     <div class="stat-label">Média Gols HT</div>
-                    <div class="stat-value">${(totalGoalsHT / games.length).toFixed(2)}</div>
+                    <div class="stat-value">${(totalGoalsHT / Math.min(games.length, windowSize)).toFixed(2)}</div>
                 </div>
                 <div class="stat-card">
                     <div class="stat-label">Média Gols FT</div>
-                    <div class="stat-value">${(totalGoalsFT / games.length).toFixed(2)}</div>
+                    <div class="stat-value">${(totalGoalsFT / Math.min(games.length, windowSize)).toFixed(2)}</div>
                 </div>
             `;
 
+            // Populate player filter
+            const playersInLeague = new Set();
+            games.forEach(g => {
+                playersInLeague.add(g.home.name);
+                playersInLeague.add(g.away.name);
+            });
+
+            const playerFilter = document.getElementById('leaguePlayerFilter');
+            playerFilter.innerHTML = '<option value="">Todos os Jogadores</option>';
+            Array.from(playersInLeague).sort().forEach(player => {
+                playerFilter.innerHTML += `<option value="${player}">${player}</option>`;
+            });
+
+            // Render games
+            renderLeagueGames(games.slice(0, windowSize));
+
             // Top Players in league
-            const playersInLeague = [];
+            const playersInLeagueMetrics = [];
             Object.keys(playerData).forEach(player => {
                 if (playerData[player][league]) {
                     const playerGames = playerData[player][league];
                     const metrics = calculatePlayerLineMetrics(playerGames, player, windowSize);
                     if (metrics) {
-                        playersInLeague.push({ player, metrics, league });
+                        playersInLeagueMetrics.push({ player, metrics, league });
                     }
                 }
             });
 
-            playersInLeague.sort((a, b) => b.metrics.games - a.metrics.games);
-            const topPlayers = playersInLeague.slice(0, 10);
+            playersInLeagueMetrics.sort((a, b) => b.metrics.games - a.metrics.games);
+            const topPlayers = playersInLeagueMetrics.slice(0, 10);
 
             document.getElementById('leaguePlayersTable').innerHTML = topPlayers.map(({ player, metrics }) => `
                 <tr>
