--- a/NBA.html
+++ b/NBA.html
@@ -1236,7 +1236,7 @@ body { padding: 20px 20px 20px 90px; transition: padding-left 0.3s ease; }
             <li><a href="formularioApostas.html"><span class="icon">💰</span><span class="label">Registrar Apostas</span></a></li>
             <li><a href="players.html"><span class="icon">🎮</span><span class="label">Análise de Jogadores</span></a></li>
             <li class="active"><a href="NBA.html"><span class="icon">🏀</span><span class="label">NBA Stats</span></a></li>
-            <li><a href="radar.html"><span class="icon">🎯</span><span class="label">Radar</span></a></li>
+            <li><a href="#" id="sidebarRadar"><span class="icon">🎯</span><span class="label">Radar</span></a></li>
             <li><a href="over.html"><span class="icon">📍</span><span class="label">Over Analysis</span></a></li>
         </ul>
     </nav>
@@ -2367,6 +2367,26 @@ body { padding: 20px 20px 20px 90px; transition: padding-left 0.3s ease; }
         document.addEventListener('DOMContentLoaded', () => {
             window.nbaApp = new NBAAnalysisApp();
         });
+    </script>
+    <script>
+        // Lógica do botão Radar na sidebar (mesma da visualization.html)
+        (function(){
+            const radarSidebarLink = document.getElementById('sidebarRadar');
+            if (radarSidebarLink) {
+                radarSidebarLink.addEventListener('click', function(e) {
+                    e.preventDefault();
+                    const authToken = localStorage.getItem('authToken');
+                    const tokenExpiry = localStorage.getItem('tokenExpiry');
+                    if (authToken && tokenExpiry) {
+                        const radarUrl = `https://rwtips.netlify.app/?auth=${encodeURIComponent(authToken)}&expiry=${tokenExpiry}`;
+                        window.open(radarUrl, '_blank');
+                    } else {
+                        alert('Erro de autenticação. Por favor, faça login novamente.');
+                        window.location.href = 'index.html';
+                    }
+                });
+            }
+        })();
     </script>
 </body>
 
