--- a/index.html
+++ b/index.html
@@ -1495,7 +1495,7 @@
             gamesTable.style.display = 'none';
 
             try {
-                const response = await fetch("https://caveira-proxy.onrender.com/api/scraped-matches?league_ids=10047781,10083563,10082427,10048705");
+                const response = await fetch("https://rwtips-r943.onrender.com/api/scraped-matches?league_ids=10047781,10083563,10082427,10048705");
                 if (!response.ok) throw new Error(`Erro na requisição: ${response.status}`);
 
                 const data = await response.json();
@@ -1550,7 +1550,7 @@
 
         async function fetchGameStats(game) {
             try {
-                const url = `https://caveira-proxy.onrender.com/api/v1/historico/confronto/${encodeURIComponent(game.home.name)}/${encodeURIComponent(game.away.name)}?page=1&limit=20`;
+                const url = `https://rwtips-r943.onrender.com/api/v1/historico/confronto/${encodeURIComponent(game.home.name)}/${encodeURIComponent(game.away.name)}?page=1&limit=20`;
                 const response = await fetch(url);
                 if (!response.ok) throw new Error(`Erro nas estatísticas: ${response.status}`);
 
