--- a/live_v2.html
+++ b/live_v2.html
@@ -1467,10 +1467,10 @@
         if (sessionStorage.getItem('loggedIn') !== 'true') {
             window.location.href = 'index.html?error=login_required';
         }
-        const API_URL_LIVE = 'https://caveira-proxy.onrender.com/api/matches/live';
-        const API_URL_FINISHED = 'https://caveira-proxy.onrender.com/api/historico/partidas';
-        const API_URL_PLAYER_HISTORY = 'https://caveira-proxy.onrender.com/api/v1/historico/partidas-assincrono';
-        const API_URL_H2H = 'https://caveira-proxy.onrender.com/api/v1/historico/confronto';
+        const API_URL_LIVE = 'https://rwtips-r943.onrender.com/api/matches/live';
+        const API_URL_FINISHED = 'https://rwtips-r943.onrender.com/api/historico/partidas';
+        const API_URL_PLAYER_HISTORY = 'https://rwtips-r943.onrender.com/api/v1/historico/partidas-assincrono';
+        const API_URL_H2H = 'https://rwtips-r943.onrender.com/api/v1/historico/confronto';
 
         let previousScores = new Map();
         let liveUpdateInterval = null;
@@ -1592,7 +1592,7 @@
 
         async function updateBestMatchups() {
             try {
-                const response = await fetch('https://caveira-proxy.onrender.com/api/dashboard/data');
+                const response = await fetch('https://rwtips-r943.onrender.com/api/dashboard/data');
                 const data = await response.json();
                 console.log('Dados recebidos da API:', data);
 
