--- a/index.html
+++ b/index.html
@@ -1495,28 +1495,42 @@
             gamesTable.style.display = 'none';
 
             try {
-                const response = await fetch("https://rwtips-r943.onrender.com/api/scraped-matches?league_ids=10047781,10083563,10082427,10048705");
-                if (!response.ok) throw new Error(`Erro na requisição: ${response.status}`);
+                // Nova API de próximos jogos (fifa): paginação e mapeamento
+                const baseUrl = 'https://api.green365.com.br/api/league/upcoming?sport=fifa&leagueId=&page=';
+                const respPage1 = await fetch(`${baseUrl}1`);
+                if (!respPage1.ok) throw new Error(`Erro na requisição: ${respPage1.status}`);
+                const page1 = await respPage1.json();
+                let items = Array.isArray(page1.data) ? page1.data : [];
+                const totalPages = Number(page1.pagination?.totalPages) || 1;
 
-                const data = await response.json();
-                const rawMatches = Array.isArray(data.scraped_matches) ? data.scraped_matches : [];
+                if (totalPages > 1) {
+                    const otherPages = await Promise.all(
+                        Array.from({ length: totalPages - 1 }, (_, i) => i + 2).map(async (p) => {
+                            const r = await fetch(`${baseUrl}${p}`);
+                            if (!r.ok) throw new Error(`Erro na página ${p}: ${r.status}`);
+                            const j = await r.json();
+                            return Array.isArray(j.data) ? j.data : [];
+                        })
+                    );
+                    items = items.concat(...otherPages);
+                }
 
-                const sortedLimited = rawMatches
-                    .filter(m => !!m.scheduled_time_brt)
+                const sortedLimited = items
+                    .filter(m => m && (m.timestamp || (m.day && m.hour)))
                     .sort((a, b) => {
-                        const dateA = parseBrtToLocal(a.scheduled_time_brt);
-                        const dateB = parseBrtToLocal(b.scheduled_time_brt);
-                        return dateA.getTime() - dateB.getTime();
+                        const ta = a.timestamp ? a.timestamp * 1000 : Date.parse(`${a.day} ${a.hour}`);
+                        const tb = b.timestamp ? b.timestamp * 1000 : Date.parse(`${b.day} ${b.hour}`);
+                        return ta - tb;
                     })
                     .slice(0, 20);
 
                 const games = await Promise.all(
                     sortedLimited.map(async (item) => {
                         const normalizedGame = {
-                            competition: { name: item.league_name },
-                            home: { name: item.home_player_name, teamName: item.home_team_name },
-                            away: { name: item.away_player_name, teamName: item.away_team_name },
-                            startTime: item.scheduled_time_brt
+                            competition: { name: item.leagueName || 'Desconhecida' },
+                            home: { name: item.home || item.home_player_name || '-', teamName: item.home_team_name || '-' },
+                            away: { name: item.away || item.away_player_name || '-', teamName: item.away_team_name || '-' },
+                            startTime: item.timestamp ? new Date(item.timestamp * 1000).toISOString() : `${item.day} ${item.hour}`
                         };
 
                         const stats = await fetchGameStats(normalizedGame);
@@ -1526,9 +1540,9 @@
                         processedGame.premiumFT = isPremiumMatchFT(processedGame);
                         processedGame.premiumHT = isPremiumMatchHT(processedGame);
 
-                        const startDate = parseBrtToLocal(item.scheduled_time_brt);
-                        processedGame.day = startDate.toLocaleDateString('pt-BR', { day: '2-digit', month: '2-digit' });
-                        processedGame.hour = startDate.toLocaleTimeString('pt-BR', { hour: '2-digit', minute: '2-digit' });
+                        const dt = item.timestamp ? new Date(item.timestamp * 1000) : new Date(`${item.day} ${item.hour}`);
+                        processedGame.day = dt.toLocaleDateString('pt-BR', { day: '2-digit', month: '2-digit' });
+                        processedGame.hour = dt.toLocaleTimeString('pt-BR', { hour: '2-digit', minute: '2-digit' });
 
                         return processedGame;
                     })
