--- a/NBA.html
+++ b/NBA.html
@@ -1222,6 +1222,7 @@ body { padding: 20px 20px 20px 90px; transition: padding-left 0.3s ease; }
 .sidebar-menu .label { opacity: 0; transition: opacity 0.3s ease; font-weight: 500; }
 .sidebar:hover .sidebar-menu .label { opacity: 1; }
 </style>
+    <script src="js/protection.js"></script>
 </head>
 
 <body>
