--- a/statistics.html
+++ b/statistics.html
@@ -619,6 +619,7 @@
             }
         }
     </style>
+    <script src="js/protection.js"></script>
 </head>
 <body>
     <nav class="sidebar">
