--- a/over.html
+++ b/over.html
@@ -766,6 +766,7 @@
             }
         }
     </style>
+    <script src="js/protection.js"></script>
 </head>
 <body>
     <nav class="sidebar">
